name:                WhoNeedsFrameworks-hakyll
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/LukasErlenbach/lukas-erlenbach.github.io
license:             BSD3
license-file:        LICENSE
author:              Lukas Erlenbach
maintainer:          lukaserlenbach@gmail.de
copyright:           2025 Lukas Erlenbach
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable WhoNeedsFrameworks-hakyll
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc
